--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   cached_network_image: ^3.2.3
   firebase_auth: ^4.10.0
   firebase_ui_auth: ^1.7.0
+  google_sign_in: ^6.1.5
+  firebase_ui_oauth_google: ^1.2.10
 
 dev_dependencies:
   flutter_test:
