--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   dio: "5.2.0"
   get_it: "6.0.0"
   http: ^0.13.3
+  video_player: ^2.3.8
 
 
 
@@ -47,6 +48,8 @@ dependencies:
   firebase_ui_auth: ^1.7.0
   google_sign_in: ^6.1.5
   firebase_ui_oauth_google: ^1.2.10
+  flutter_dotenv: ^5.1.0
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
@@ -73,6 +76,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/icons/
+    - assets/videos/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
