--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   firebase_ui_oauth_google: ^1.2.10
   flutter_dotenv: ^5.1.0
   carousel_slider: ^4.2.1
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
